<?xml version="1.0"?>
<package format="2">
  <name>rtr_common</name>
  <version>0.1.0</version>
  <description>The rtr_common package</description>

  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>

  <license>BSD</license>

  <url type="repository">http://gitlab.com/rogiken-tnk-ros/rtr_common</url>
  <author email="groadpg@gmail.com">Ryodo Tanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rtr_double_arm_v7_description</exec_depend>
  <exec_depend>rtr_quadcopter_description</exec_depend>
  
  <export>
    <metapackage/>
  </export>

</package>
