<?xml version="1.0"?>
<package format="2">
  <name>rtr_double_arm_v7_description</name>
  <version>1.0.0</version>
  <description>The RTRDoubleArmV7 description package</description>

  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>
  <license>MIT</license>
  
  <url type="repository">http://gitlab.com/rogiken-tnk-ros/rtr_models</url>

  <author email="groadpg@gmail.com">RyodoTanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>

</package>
